# cppdlr-AMI

./: CMakeLists.txt  README.md  compile.sh  diagamiCMakeLists.txt  libgraphCMakeLists.txt
src/: AmiDlr_func.cpp  dlr_ami.hpp  dlr_helper.cpp  helper.cpp  mini_ami.hpp  mini_main.cpp  params_reader.cpp
